[package]
name = "fallback-derive"
version = "0.1.1"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
categories = ["data-structures"]
description = "A helper library to implement fallback mechaism."
edition = "2021"
keywords = ["fallback"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Berrysoft/fallback"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
